<resources>
    <string name="app_name">Home</string>
    <string name="usuario">Usuario</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_catalogo">Catalogo</string>
    <string name="menu_revision">Revision</string>
    <string name="menu_usuarios">Usuarios</string>
    <string name="menu_ventas">Ventas</string>

    <string name="home_second">Home Second</string>
    <string name="agregar_revision" />
</resources>
